--- a/prity.html
+++ b/prity.html
@@ -1,6 +1,7 @@
 <html>
-<head></title> git task</head></title>
+ git task
 <body>
-jhuc kj,nnlhhjhcxgv v
+<h1>  GIT TASK</H1>
+I am priti
 </body>
 </html>
