--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 </head>
 <body>
 <body bgcolor="BlanchedAlmond">
+This page will directly lead you to My personal website just click the link given below.
+<a href="C:\Users\DELL\Documents\GitHub\Priti.github.io\prity.html">click here</a>
 </body>
 </html>
